archive/apps/pihole/pihole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-vpn
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      tolerations:
        - key: "hardware"
          operator: "Equal"
          value: "low-power"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - paimon
      containers:
        - name: gluetun
          image: qmcgaw/gluetun@sha256:e36af8d846731084256ef9f1cca3e760261224121b2d478d304f5b2333c15258
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
        - name: pihole
          image: pihole/pihole@sha256:5af11b0f270b24a35f216c90af25d11b8d28b5ae57deba5af95345e5b20a7d8e
          volumeMounts:
            - name: pihole-config
              mountPath: /etc/pihole
            - name: dnsmasq-config
              mountPath: /etc/dnsmasq.d

      # --- 2. ADD THIS SECTION AT THE END ---
      volumes:
        - name: pihole-config
          persistentVolumeClaim:
            claimName: pihole-config-pvc
        - name: dnsmasq-config
          persistentVolumeClaim:
            claimName: pihole-dnsmasq-pvc
