archive/apps/pihole/pihole-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: default
  annotations:
    # This tells MetalLB to specifically use the Pi for this IP
    metallb.universe.tf/loadBalancerIPs: 192.168.1.51
spec:
  selector:
    app: pihole
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: ui
      port: 80
      targetPort: 80
  type: LoadBalancer
