archive/apps/pihole/pihole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: pihole.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-dns
                port:
                  number: 80
